# ortn

./: .env  .gitignore  Cargo.toml  README.md
ortn-sys/: Cargo.toml  build.rs
ortn-sys/src/: lib.rs
ortn-sys/src/ffi/: aarch64-macos-cpu.rs  aarch64-macos.rs  cuda.rs  x86_64-linux.rs  x86_64-macos.rs
src/: api.rs  environment.rs  error.rs  iobinding.rs  lib.rs  macros.rs  session.rs  value.rs
