[package]
name = "ortn-sys"
version = "1.19.2"
edition = "2021"
authors = ["Xiangyu Ye <yexiangyu@gmail.com>"]
description = "Rust bindings for ONNXRuntime"
license = "MIT"

[build-dependencies]
dotenv = "0.15.0"
bindgen = "0.70.1"
regex = "1.10.6"

[features]
bindgen = []
cuda = []

[dependencies]
